--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header class="container">
+       
         <div class="navbar">
             <div class="logo">
                 <a href="">
@@ -20,8 +21,12 @@
                     <span></span>
                     <span></span>
                     <span></span>
-
                 </div>
+                </div>
+                <nav>
+                    <a href="">Blog</a>
+                    <a href="">Contato</a>
+                </nav>
     </header>
     <script type="text/javascript" src="assets/js/script.js"></script>
     
