--- a/index.html
+++ b/index.html
@@ -4,28 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
-    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/header.css">
     <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
 </head>
 <body>
-    <header class="container">
-       
+    <header class="container">       
         <div class="navbar">
             <div class="logo">
                 <a href="">
                 <img src="assets/images/logo.png" alt="">
                     </a>
-                    </div>
-                </div>
+            </div>
                 <div class="menu-opener">
                     <span></span>
                     <span></span>
                     <span></span>
                 </div>
-                </div>
+        </div>
                 <nav>
                     <a href="">Blog</a>
-                    <a href="">Contato</a>
+                    <a href="" class="button">Contato</a>
                 </nav>
     </header>
     <script type="text/javascript" src="assets/js/script.js"></script>
