--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                     <a href="" class="button">Contato</a>
                 </nav>
     </header>
+    <section class="hero container">
+        <h1>Designer, FrontEnd
+            Developer & Vídeo Maker
+        </h1>
+        <h2> Eu desenho e codifico projetos bonitos e amo o que eu faço.</h2>
+    </section>
     <script type="text/javascript" src="assets/js/script.js"></script>
     
 </body>
