--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portifólio</title>
     <link rel="stylesheet" href="assets/css/base.css">
     <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/hero-devices.css">
     <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
 </head>
 <body>
@@ -32,6 +33,9 @@
             Developer & Vídeo Maker
         </h1>
         <h2> Eu desenho e codifico projetos bonitos e amo o que eu faço.</h2>
+        <img class="hero-avatar" src="./assets/images/avatar.svg" alt="">
+        <img class="hero-device" src="./assets/images/hero-devices.svg" alt="">
+
     </section>
     <script type="text/javascript" src="assets/js/script.js"></script>
     
