--- a/index.html
+++ b/index.html
@@ -4,40 +4,119 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
-    <link rel="stylesheet" href="assets/css/base.css">
-    <link rel="stylesheet" href="assets/css/header.css">
-    <link rel="stylesheet" href="assets/css/hero-devices.css">
-    <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
+    <link rel="stylesheet" href="./assets/css/base.css">
+    <link rel="shortcut icon" type="image/png" href="./assets/images/logo.png">
+    <link rel="stylesheet" href="./assets/css/header.css">
+    <link rel="stylesheet" href="./assets/css/hero-devices.css">
+    s">
+    <link rel="stylesheet" href="./assets/css/intro.css">
+    <link rel="stylesheet" href="./assets/css/skills.css">
+
 </head>
 <body>
-    <header class="container">       
+    <header class="container">
         <div class="navbar">
             <div class="logo">
                 <a href="">
-                <img src="assets/images/logo.png" alt="">
-                    </a>
+                    <img src="./assets/images/logo.png" alt="">
+                </a>      
             </div>
-                <div class="menu-opener">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
+            <div class="menu-opener">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
-                <nav>
-                    <a href="">Blog</a>
-                    <a href="" class="button">Contato</a>
-                </nav>
+        <nav>
+            <a href="">Blog</a>
+            <a href=""class="button">Contato</a>
+        </nav>
     </header>
     <section class="hero container">
-        <h1>Designer, FrontEnd
+        <h1>Designer, Frontend
             Developer & Vídeo Maker
         </h1>
-        <h2> Eu desenho e codifico projetos bonitos e amo o que eu faço.</h2>
+        <h2>Eu desenho e codifico projetos
+            bonitos e amo o que faço.
+        </h2>
         <img class="hero-avatar" src="./assets/images/avatar.svg" alt="">
         <img class="hero-device" src="./assets/images/hero-devices.svg" alt="">
-
     </section>
-    <script type="text/javascript" src="assets/js/script.js"></script>
-    
+    <section class="intro">
+        <div class="container">
+            <div class="box">
+                <p class="title">Oi, eu sou Bruno da Silva, tudo bem?</p>
+                <p class="subtitle">Desde que comecei minha jornada como designer freelancer, há 12 anos, fiz trabalhos remotos para agências, ajudei startups e colaborei com pessoas talentosas para criar produtos digitais para ambos uso empresarial e do consumidor. Sou bastante confiante, naturalmente curioso e trabalho para melhorar minhas habilidades constantemente.</p>
+            </div>
+        </div>
+    </section>
+    <section class="skills">
+        <div class="skills-overlay"></div>
+        <div class="container">
+            <div class="grid">
+                <div class="skill">
+                    <div class="skill-icon">
+                        <img src="./assets/images/design.svg" alt=""/>
+                    </div>
+                    <p class="skill-title">Designer</p>
+                    <p class="skill-desc">Eu valorizo estruturas simples, desgin clean e interações customizadas.</p>
+                    <p class="skill-sub">Coisas que gosto de desenhar</p>
+                    <p class="skill-txt">UX, UI, Web, Apps, Logos</p>
+                    <p class="skill-sub">Ferramentas que uso</p>
+                    <div class="skill-txt">
+                        <ul>
+                            <li>Affinity Designer</li>
+                            <li>Figma</li>
+                            <li>Papel & Caneta</li>
+                            <li>Sketch</li>
+                            <li>WebFlow</li>
+                        </ul>
+                    </div>
+                </div>
+        <div class="skill">
+            <div class="skill-icon">
+                <img src="./assets/images/code.svg" alt=""/>
+            </div>
+            <p class="skill-title">Frontend Developer</p>
+            <p class="skill-desc">Gosto de codificar projetos do zero, trazer ideias a vida no navegador.</p>
+            <p class="skill-sub">Linguagens que uso</p>
+            <p class="skill-txt">HTML, CSS, Typescript, React</p>
+            <p class="skill-sub">Ferramentas que uso</p>
+            <div class="skill-txt">
+                <ul>
+                    <li>Github</li>
+                    <li>Tailwind</li>
+                    <li>React</li>
+                    <li>VSCode</li>
+                    <li>Netlify</li>
+                    <li>Xcode</li>
+                </ul>
+            </div>
+        </div>
+        <div class="skill">
+            <div class="skill-icon">
+                <img src="./assets/images/video.svg" alt=""/>
+            </div>
+            <p class="skill-title">Video Maker</p>
+            <p class="skill-desc">Amo fazer vídeos com boas produções e efeitos especiais.</p>
+            <p class="skill-sub">Coisas que gosto de filmar</p>
+            <p class="skill-txt">Pessoas, Produtos, Ambientes, Carros</p>
+            <p class="skill-sub">Ferramentas que uso</p>
+            <div class="skill-txt">
+                <ul>
+                    <li>Adobe Premiere</li>
+                    <li>Davinci Resolve</li>
+                    <li>Câmera Canon</li>
+                    <li>Luzes</li>
+                    <li>Microfone Rode</li>
+                </ul>
+            </div>
+        </div>
+        </div>
+        </div>
+    </section>
+    <script type="text/javascript" src="./assets/js/script.js">
+
+    </script>
 </body>
 </html>
