--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="shortcut icon" type="image/png" href="./assets/images/logo.png">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/hero-devices.css">
-    s">
     <link rel="stylesheet" href="./assets/css/intro.css">
     <link rel="stylesheet" href="./assets/css/skills.css">
+    <link rel="stylesheet" href="./assets/css/recent-work.css">
 
 </head>
 <body>
@@ -114,6 +114,65 @@
         </div>
         </div>
         </div>
+    </section>
+    <section class="recent-work container">
+        <p class="title">Meus trabalhos recentes            
+        </p>
+        <p class="subtitle">Aqui estão alguns tabalhos que já fiz. Quer ver mais? <a href="">Entra em contato</a>
+        </p>
+        <div class="grid">
+            <div class="item">
+
+                    <img class="image" src="assets/images/works/app haruy.png">
+                    <div class="overlay">
+                        <p>Haruy Sushi - Cardápio com integração ao whatsapp</p>
+                        <a href="https://literate-meme-v66vvq644xxw3wggp-5500.app.github.dev/" class="button">Visite o website</a>
+
+                </div>
+            </div>
+            <div class="item">
+
+                    <img class="image" src="assets/images/works/burkettandco.png">
+                    <div class="overlay">
+                        <p>Aqui vai uma descrição sobre o projeto em si ou a própia empresa</p>
+                        <a href="" class="button">Visite o website</a>
+
+                </div>
+            </div>
+            <div class="item">
+
+                    <img class="image" src="assets/images/works/chronicled.png">
+                    <div class="overlay">
+                        <p>Aqui vai uma descrição sobre o projeto em si ou a própia empresa</p>
+                        <a href="" class="button">Visite o website</a>
+
+                </div>
+            </div>
+            <div class="item">
+
+                    <img class="image" src="assets/images/works/glcsolutions.png">
+                    <div class="overlay">
+                        <p>Aqui vai uma descrição sobre o projeto em si ou a própia empresa</p>
+                        <a href="" class="button">Visite o website</a>
+                </div>
+            </div>
+            <div class="item">
+
+                    <img class="image" src="assets/images/works/coupal.png">
+                    <div class="overlay">
+                        <p>Aqui vai uma descrição sobre o projeto em si ou a própia empresa</p>
+                        <a href="" class="button">Visite o website</a>
+                    </div>
+            </div>
+            <div class="item">
+
+                    <img class="image" src="assets/images/works/wedlerengineering.png">
+                    <div class="overlay">
+                        <p>Aqui vai uma descrição sobre o projeto em si ou a própia empresa</p>
+                        <a href="" class="button">Visite o website</a>
+            </div>
+        </div>
+        <a href="" class="button seemore">Deseja ver mais?</a>
     </section>
     <script type="text/javascript" src="./assets/js/script.js">
 
